[project]
name = 'ntelebot'
version = '0.4.6'
description = 'A simple implementation of https://core.telegram.org/bots/api.'
authors = [
    {name = 'Daniel Reed', email = 'nmlorg@gmail.com'},
]
requires-python = '>=3.10'
dependencies = [
    'requests',
]

[project.optional-dependencies]
dev = [
    'pylint',
    'pytest-cov',
    'pytest',
    'requests-mock',
]

[project.urls]
Homepage = 'https://github.com/nmlorg/ntelebot'
Issues = 'https://github.com/nmlorg/ntelebot/issues'

[tool.pylint.'MESSAGES CONTROL']
disable = [
    'consider-using-ternary',
    'duplicate-code',
    'inconsistent-return-statements',
]

[tool.pytest.ini_options]
addopts = '-rN --cov=ntelebot --cov-report=html'
consider_namespace_packages = true
testpaths = ['ntelebot']
verbosity_assertions = 2

[tool.setuptools.packages.find]
include = ['ntelebot', 'ntelebot.*']

[tool.yapf]
based_on_style = 'google'
column_limit = 100
